Update java opts in scripts