@@ -1,6 +1,6 @@
 set SAMPLE=%~dp0..
 set AKKA_HOME=%SAMPLE%\\..\\..\\..\\..
-set JAVA_OPTS="-Xmx512M"
+set JAVA_OPTS="-Xms1536M -Xmx1536M -Xss1M -XX:MaxPermSize=256M -XX:+UseParallelGC"
 set AKKA_CLASSPATH="%AKKA_HOME%\\lib\\scala-library.jar;%AKKA_HOME%\\lib\\akka\\*"
 set SAMPLE_CLASSPATH="%AKKA_CLASSPATH%;%SAMPLE%\\lib\\*;%SAMPLE%\\config"
 
